--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -4,19 +4,22 @@
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>$(MSBuildThisFileDirectory)build\CopyOnWrite.snk</AssemblyOriginatorKeyFile>
 
-    <!--When building from command line with 'msbuild' command the Configuration property may be null. Setting the default to compute the right output directory.-->
+    <!-- When building from command line with 'msbuild' command the Configuration property may be null. Setting the default to compute the right output directory. -->
     <Configuration Condition=" '$(Configuration)' == '' ">Release</Configuration>
 
     <DistribRoot>$(MSBuildThisFileDirectory)distrib\$(Configuration)\</DistribRoot>
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
 
+    <!-- Use embedded PDB mode to improve diagnosing and debugging experience. -->
+    <DebugType>embedded</DebugType>
+
     <TreatWarningsAsErrors Condition="'$(TreatWarningsAsErrors)' == ''">true</TreatWarningsAsErrors>
   </PropertyGroup>
 
   <!-- Common assembly version and other properties. Also used in package publish. -->
   <PropertyGroup>
-    <Version>0.1.0.0</Version>
+    <Version>0.1.1.0</Version>
 
     <Company>Microsoft</Company>
     <Copyright>Copyright (c) Microsoft Corporation</Copyright>
