--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -19,6 +19,8 @@
 
   <!-- Common assembly version and other properties. Also used in package publish. -->
   <PropertyGroup>
+
+    <!-- CODESYNC: When changing version number update README.md -->
     <Version>0.1.5.0</Version>
 
     <Company>Microsoft</Company>
