--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -20,13 +20,14 @@
   <!-- Common assembly version and other properties. Also used in package publish. -->
   <PropertyGroup>
 
-    <!-- CODESYNC: When changing version number update README.md -->
+    <!-- DOCSYNC: When changing version number update README.md -->
     <Version>0.1.5.0</Version>
 
     <Company>Microsoft</Company>
     <Copyright>Copyright (c) Microsoft Corporation</Copyright>
     <Description>.NET library that encapsulates OS and filesystem differences in the ability to create Copy-on-Write file links.</Description>
     <Product>Microsoft.CopyOnWrite</Product>
+
   </PropertyGroup>
 
 </Project>
