--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -22,7 +22,9 @@ jobs:
       - run: dotnet build --configuration Release --no-restore
       - name: Enable Hyper-V for ReFS VHD testing
         # Hyper-V install wants to restart and pauses console, disable that.
-        run: DISM /Online /Enable-Feature /All /FeatureName:Microsoft-Hyper-V /NoRestart
+        run: |
+          DISM /Online /Enable-Feature /All /FeatureName:Microsoft-Hyper-V /NoRestart
+          if "%ERRORLEVEL%"=="3010" echo Expected 3010 exit cod efor pending reboot && exit /b 0
         shell: cmd
       #- name: See if VM reboot can work in CI pipeline
       #  run: shutdown -r -t 0
