--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -14,6 +14,11 @@ jobs:
     name: Windows build and test
     runs-on: windows-2022  # 2019 is not sufficient, Windows 21H1+ is best for ReFS bug fixes
     steps:
+      - run: |
+          dir c:\
+          dir d:\
+          dir e:\
+        shell: cmd
       - uses: actions/checkout@v2
       - name: Setup .NET SDK
         uses: actions/setup-dotnet@v1
