Migrate to .NET 6 for tests and tools. Use C# 10 features. Asyncify stress tests

--- a/exe/CoWCloneFile.csproj
+++ b/exe/CoWCloneFile.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <RootNamespace>Microsoft.CopyOnWrite</RootNamespace>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <PlatformTarget>x64</PlatformTarget>
     <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
     <DistribDir>$(DistribRoot)CloneFileTool\</DistribDir>
@@ -18,7 +18,7 @@
 
   <Target Name="PostBuildPublish" AfterTargets="PostBuildEvent" Inputs="$(OutputPath)CoWCloneFile.exe" Outputs="$(DistribDir)CoWCloneFile.exe">
     <!-- ReadyToRun / self-contained pre-compiled .exe -->
-    <Exec Command="dotnet publish --no-build --configuration $(Configuration) --self-contained true /p:PublishTrimmed=true --output $(DistribDir)" />
+    <Exec Command="dotnet publish --no-build --configuration $(Configuration) --self-contained true --output $(DistribDir)" />
   </Target>
 
 </Project>
