--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -28,7 +28,7 @@ jobs:
           echo SHRINK DESIRED=10240             >>DiskPartScript.txt
           echo CREATE PARTITION PRIMARY         >>DiskPartScript.txt
           echo LIST PARTITION                   >>DiskPartScript.txt
-          echo FORMAT FS=ReFS LABEL=ReFS Test   >>DiskPartScript.txt
+          echo FORMAT FS=ReFS LABEL="ReFS Test" >>DiskPartScript.txt
           echo ASSIGN LETTER=E                  >>DiskPartScript.txt
           echo LIST VOLUME                      >>DiskPartScript.txt
           echo SELECT VOLUME 4                  >>DiskPartScript.txt
