--- a/lib/CopyOnWrite.csproj
+++ b/lib/CopyOnWrite.csproj
@@ -5,6 +5,10 @@
     <TargetFrameworks>netstandard2.0;net6.0</TargetFrameworks>
 
     <DistribDir>$(DistribRoot)Package\</DistribDir>
+
+    <!-- Source Link -->
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -13,6 +17,11 @@
 
   <ItemGroup>
     <None Include="../README.md" Pack="true" PackagePath="" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <!-- Source Link -->
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All"/>
   </ItemGroup>
 
   <PropertyGroup>
