--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -41,5 +41,10 @@ jobs:
           @rem CODESYNC: WindowsReFSDriveSession.cs
           set CoW_Test_ReFS_Drive=E:\
 
-          dotnet test --configuration Release --no-build
+          dotnet test --configuration Release --no-build /bl
         shell: cmd
+      - uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          # implicitly named as 'artifact'
+          path: msbuild.msbinlog
