--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -42,9 +42,10 @@ jobs:
           set CoW_Test_ReFS_Drive=E:\
 
           dotnet test --configuration Release --no-build /bl
+          dir /s /b *.binlog
         shell: cmd
       - uses: actions/upload-artifact@v4
         if: always()
         with:
           # implicitly named as 'artifact'
-          path: msbuild.msbinlog
+          path: msbuild.binlog
