--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -45,10 +45,5 @@ jobs:
           @rem CODESYNC: WindowsReFSDriveSession.cs
           set CoW_Test_ReFS_Drive=E:\
 
-          dotnet test --configuration Release --no-build /bl
+          dotnet test --configuration Release --no-build
         shell: cmd
-      - uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          # implicitly named as 'artifact'
-          path: msbuild.binlog
